--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="box">
                         <img src="images/profile-2.jpg" alt="">
                         <div class="text">Sujit Kumar </div>
-                        <p>Hs is a professional Digital Marketor and Enthusiatic person plays an important role for us.</p>
+                        <p>He is a professional Digital Marketor and Enthusiatic person plays an important role for us.</p>
                     </div>
                 </div>
                 <div class="card">
