--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Dharmender and I'm a <span class="typing-2"></span></div>
-                    <p>Hey I'm a enthusiastic person and a technology lover. I love to learn about technology and computers. Basically I'm from Bihar and living in Delhi since my childhood. Also I'm full stack web developer. I develop website using latest technology i.e MongoDB, Express, React and NodeJS.
+                    <p>Hey I'm an enthusiastic person and a technology lover. I love to learn about technology and computers. Basically I'm from Bihar and living in Delhi since my childhood. Also I'm full stack web developer. I develop website using latest technology i.e MongoDB, Express, React and NodeJS.
                         Besides this i'm very hardworking, creative and very serious about my work. Fond of watching movies, listening songs and playing football.</p>
                     <a href="#">Download CV</a>
                 </div>
